--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="0; url='https://www.mariages.net/website/index.php?idWebsite=8671845&idPage=61602831'" />
+    <meta http-equiv="refresh" content="0; url='https://www.https://www.mariages.net/website/index.php?idWebsite=8671845&idPage=61602831'" />
     <title>Redirection...</title>
 </head>
 <body>
-    <p>Si vous n'êtes pas redirigé automatiquement, <a href="https://www.mariages.net/website/index.php?idWebsite=8671845&idPage=61602831">cliquez ici</a>.</p>
+    <p>Si vous n'êtes pas redirigé automatiquement, <a href="https://www.https://www.mariages.net/website/index.php?idWebsite=8671845&idPage=61602831">cliquez ici</a>.</p>
 </body>
 </html> 
