--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Redirection en cours...</title>
-    <script>
-        setTimeout(function() {
-            window.location.replace("https://www.mariages.net/website/index.php?idWebsite=8671845&idPage=61602831");
-        }, 1000);
-    </script>
+   <script>
+    setTimeout(function() {
+        window.open("https://www.mariages.net/website/index.php?idWebsite=8671845&idPage=61602831", "_self");
+    }, 1000);
+</script>
 </head>
 <body>
     <p>Redirection en cours... Si vous n'êtes pas redirigé, <a href="https://www.mariages.net/website/index.php?idWebsite=8671845&idPage=61602831">cliquez ici</a>.</p>
